refactor: migrate from StringUtils to Strings.CS/CI API